package com.leo.principles.p2_RichterSubstitutionPrinciple.before;

/**
 * @author leijiong
 * @version 1.0
 */
public class Rectangle {

    private double length;
    private double width;

    public double getLength()
    {
        return length;
    }

    public void setLength(double length)
    {
        this.length = length;
    }

    public double getWidth()
    {
        return width;
    }

    public void setWidth(double width)
    {
        this.width = width;
    }
}
